--- a/index.html
+++ b/index.html
@@ -10,8 +10,34 @@
 
 </head>
 <body>
-    
+ 
+    <!-- container-->
+    <div class="container w-25 p-3">
 
+
+    <!--title-->
+
+        <h1>Calcolo del prezzo del biglietto del treno</h1>
+    <!--/title-->
+
+
+    <!--form -->
+    <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    <!--/form -->
+
+    </div>
+    <!-- /container-->
 
 
 
