added calculator form id

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <!--form -->
-    <form>
+    <form id="calculator-form">
         <div class="mb-3">
           <label for="user-km" class="form-label">Inserisci i km da percorrere</label>
           <input type="number" class="form-control" id="user-km" >
