added html result container

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
       </form>
     <!--/form -->
+    
+
+    <!-- result container-->
+    <div class="py-5 d-none" id="result-container">
+        <h3 id="result"></h3>
+    <!-- /result container-->
+
+
+    </div>
 
     </div>
     <!-- /container-->
